before converting data models to hold the date of the event and time of the event separately